add RxSwift 6 template

--- a/RxSwift-6/Podfile
+++ b/RxSwift-6/Podfile
@@ -6,7 +6,7 @@ target 'RxWeather' do
   use_frameworks!
 
   # Pods for RxWeather
-  pod 'RxSwift'
+  pod 'RxSwift', "6.2.0"
   pod 'RxCocoa'
   pod 'NSObject+Rx'
   pod 'RxDataSources'
